added some basic infos to the files

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "firstapp": {
+    "employee-management-system": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/employee-management-system",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -57,10 +58,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "firstapp:build:production"
+              "buildTarget": "employee-management-system:build:production"
             },
             "development": {
-              "buildTarget": "firstapp:build:development"
+              "buildTarget": "employee-management-system:build:development"
             }
           },
           "defaultConfiguration": "development"
