--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng build --configuration production --base-href /employee-management-system/ && npx angular-cli-ghpages --dir=dist/employee-management-system/browser"
   },
   "prettier": {
     "printWidth": 100,
@@ -53,6 +54,7 @@
     "@angular/cli": "^20.3.5",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
